--- a/kafka/src/main/resources/application.properties
+++ b/kafka/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=kafka
+spring.kafka.producer.bootstrap-server = 127.0.0.1:22181
+spring.kafka.producer.key-serializer = org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer = org.springframework.kafka.support.serializer.JsonDeserializer
